alignment correction

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+body{
+    font-family: 'Montserrat', sans-serif;
+}
 .carousel-item img{
     filter: brightness(30%);
 }
